Use fixed positioning for the editor story header

--- a/app/scss/components/modules/editor/sidebar.scss
+++ b/app/scss/components/modules/editor/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
     position: fixed;
-    top: $header-height;
+    top: $header-height*2;
     right: 0;
     bottom: 0;
     width: $sidebar-collapsed-width;
