--- a/app/scss/components/modules/editor/editor-layout.scss
+++ b/app/scss/components/modules/editor/editor-layout.scss
@@ -1,5 +1,6 @@
 div.editor-content {
     height: 100%;
+    margin-top: 4em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
