--- a/app/scss/theme/variables.scss
+++ b/app/scss/theme/variables.scss
@@ -157,6 +157,8 @@ $content-list-item-3-spacing:           1px;
 $content-list-item-3-bg-color:          lighten($section-header-bg-color, 20%);
 $content-list-3-bg-color:               $content-list-item-1-bg-color;
 
+$content-list-handle-color:             #bbb;
+
 $run-failed-color:                      $light-red;
 $run-success-color:                     $lime;
 $run-skipped-color:                     $yellow;
