Indent step handle for a more intuitive sorting layout in the scenario editor

--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -341,7 +341,7 @@
                             font-size: 1.5em;
                             top: .5em;
                             color: $content-list-handle-color;
-                            left: .45em;
+                            left: 1.5em;
                         }
 
                         &.expand:after {
