--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -8,7 +8,8 @@
         <i class="fa" ng-class="{'fa-search-minus': story.sidebarIsExpanded(), 'inactive fa-search-plus': !story.sidebarIsExpanded()}" ng-click="story.toggleSidebar()"></i>
     </div>
 </div>
-<div class="editor-content">
+<aside class="sidebar" ng-class="{'expand' : story.sidebarIsExpanded()}" sidebar="false"></aside>
+<div class="editor-content" ng-class="{'sb-expand' : story.sidebarIsExpanded()}">
     <ul id="main-content-list" story-collapse class="main-content-list">
         <li class="cl list-animate">
             <div class="selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:0})}" ng-click="story.selectedItem.setSelectedItem(null)">
