--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -108,6 +108,12 @@
                 }
             }
 
+            > div.actions > strong {
+                font-size: $content-list-item-action-icon-size;
+                position: relative;
+                top: $content-list-item-action-icon-top;
+            }
+
             &.detailed.active,
             &.detailed.always {
                 min-height: $content-list-item-2-det-height;
