Ensure that quick access on hover buttons are not enforced in every list

--- a/app/scss/components/modules/content-filter-list-headers.scss
+++ b/app/scss/components/modules/content-filter-list-headers.scss
@@ -26,7 +26,7 @@
         background: $hover-bg-color;
     }
 
-    &.selectable:hover,
+    &.quick:hover,
     &.active {
         .actions {
             opacity: 1;
