Fix a reference to the hasMorePages function in the reports listing that caused an error

--- a/app/views/modules/runner/reports.html
+++ b/app/views/modules/runner/reports.html
@@ -32,4 +32,4 @@
     </li>
 </ul>
 <h1 class="hero-notice" translate="RUNNER.REPORTS.NO_REPORTS" ng-show="filteredReports.length === 0 && initialized()"></h1>
-<div pagination class="pagination appear-delayed" has-next="reports.hasMorePages()" current-page="reports.currentPage" list-ref="reports.reportListRef" />
+<div pagination class="pagination appear-delayed" has-next="reports.hasMorePages" current-page="reports.currentPage" list-ref="reports.reportListRef" />
