Remove the need for responsive resizing of the editor title fields by using the css3 supported calc method

--- a/app/scss/components/modules/content-list.scss
+++ b/app/scss/components/modules/content-list.scss
@@ -32,7 +32,7 @@
             &.selectable:hover,
             .active {
                 > div.title {
-                    max-width: 85%;
+                    max-width: calc(100% - 8em);
                 }
             }
 
