Add a story list to the editor.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -29,6 +29,7 @@
 @import 'components/modules/editor/sidebar';
 @import 'components/modules/editor/variable-blocks';
 @import 'components/modules/editor/modal';
+@import 'components/modules/editor/stories-list';
 
 // finally enhance the components with some theme magic
 @import 'theme/styles';
