--- a/app/views/modules/writer/stories.html
+++ b/app/views/modules/writer/stories.html
@@ -1,5 +1,5 @@
 <div class="stories filter list-item">
-    <div class="header selectable">
+    <div class="header selectable" ng-click="stories.selectedItem.setSelectedItem(null)">
         <div class="prefix">
             <i class="fa fa-bars" ng-click="toggleAll()"></i>
         </div>
