Add link for header button in the editor.

--- a/app/views/modules/writer/stories.html
+++ b/app/views/modules/writer/stories.html
@@ -8,7 +8,7 @@
             <div class="select"></div>
         </div>
         <div class="actions">
-            <button>
+            <button linkify="/writer/stories/new">
                 <i class="fa fa-plus"></i>
                 <span translate="WRITER.STORIES.NEW_STORY"></span>
             </button>
